kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ds-devops
  labels:
    name: ds-devops
    app: ds-devops-project
