kubernetes/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ds-devops-frontend-ingress
  namespace: ds-devops
  annotations:
    traefik.ingress.kubernetes.io/router.priority: "50"
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ds-devops-frontend-service
            port:
              number: 80
